[package]
name = "White_hacker"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.40.0", features = ["full"] }

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
eyre = "0.6.12"
thiserror = "2.0.11"

# Environment and configuration
dotenvy = "0.15"

# Static values
once_cell = "1.19"

# Serialization for Binance API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP and WebSocket client
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# Ethereum/Alloy
alloy = { version = "1.0.16", features = ["full"] }
amms = "0.7.2"

# Async utilities
futures = "0.3.31"


[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
